K8s/broker.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: broker
  name: broker
spec:
  ports:
    - port: 9092
  selector:
    app: broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broker
  name: broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              name: broker
