K8s/mediaapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediaserver
  labels:
    app: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediaserver
  template:
    metadata:
      labels:
        app: mediaserver
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: mediaserver
          image: ahmedeloraby/mediaapp
          imagePullPolicy: Always

          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 200m
              memory: 300Mi
          ports:
            - containerPort: 8080
              name: mediaserver

---
apiVersion: v1
kind: Service
metadata:
  name: mediaserver-srv
spec:
  selector:
    app: customer-app
  type: ClusterIP

  ports:
    - name: mediaserver
      port: 80
      targetPort: 8080
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
