K8s/zookeper.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  type: NodePort
  ports:
    - name: zookeeper
      port: 2181
      nodePort: 30181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: confluentinc/cp-zookeeper:7.4.0
          imagePullPolicy: IfNotPresent
          name: zookeeper
          ports:
            - containerPort: 2181
      ZOOKEEPER_TICK_TIME: 2000
